# Indefinite.jl

./: INSTALL  Project.toml  README.md  clean  configure  init.g  test.jl  test_gap.jl
Examples/Automorphisms/: Test_Klein_Quadric.g
ExternalProg/FindNegativeVect/: Makefile.in  configure  configure.ac
ExternalProg/FindNegativeVect/Example/: MatF  Res
ExternalProg/FindNegativeVect/OLD/: makefile
ExternalProg/FindNegativeVect/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
ExternalProg/FindNegativeVect/src/: Makefile.am  Makefile.in
ExternalProg/SV/: Makefile.in  configure  configure.ac
ExternalProg/SV/autom4te.cache/: output.0  requests  traces.0  traces.1
ExternalProg/SV/src/: Makefile.am  Makefile.in  shvec.c  shvec.h  sv.c  sv_gmp_read.c
ExternalProg/cddlib-094g_mod/lib-src/: cddio.c
ExternalProg/cddlib-094g_mod/src-gmp/: testlp2.c
ExternalProg/export.V2.5/: Makefile.in  configure  configure.ac
ExternalProg/export.V2.5/Examples/: AUTO.in  AUTO.out  ISOM.in  ISOM.out
ExternalProg/export.V2.5/Manual/: README.AUTO  README.ISOM
ExternalProg/export.V2.5/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
ExternalProg/export.V2.5/src/: AUTO.c  ISOM.c  Makefile.am  Makefile.in  auttools.c  bachtools.c  iotools.c  isotools.c  lattools.c  mattools.c  orbtools.c  preproc.c  sorttools.c  types.h
ExternalProg/lrslib-042cmod/: Makefile.am  Makefile.in  configure  configure.ac
ExternalProg/lrslib-042cmod/Examples/: cube.ine
ExternalProg/lrslib-042cmod/autom4te.cache/: output.0  requests  traces.0  traces.1
ExternalProg/lrslib-042cmod/src/: Makefile  Makefile.am  Makefile.in
ExternalProg/lrslib-042cmod/src-gmp/: Makefile.am  Makefile.in  lrslib.c
ExternalProg/lrslib-042cmod/src-long/: Makefile.am  Makefile.in  lrslong.c  lrslong.h
ExternalProg/lrslib-042cmod/src-mp/: Makefile.am  Makefile.in  lrsmp.c  lrsmp.h  setupnash.c
ExternalProg/lrslib-042cmod/src/.deps/: lrs.Po  lrslib.Po  lrsmp.Po
InstallScript/: INSTALL_AUTOISOM  INSTALL_NegativeVect  INSTALL_cdd  INSTALL_cdd_QN  INSTALL_lrs  INSTALL_nauty  INSTALL_polyhedral_common  INSTALL_sv
PerlScript/: AUTOMtoGAP  ConvertPariIsotrop  GetDate  ISOMtoGAP  IsEmptyFile  NautyGroupToGAP_sec  NautyIsoOutputToGAP  NudifyLRS.reductionNG  lpcddcleaner  lpcddcleanerQN  svRead  svWrite  svWrite_QN
TestCases/: POLY_CDD_LINEARPROGRAMMING_case1_FAC  POLY_CDD_LINEARPROGRAMMING_case1_Ineq  SV_NEAR_case1_Gram  SV_NEAR_case1_V
TestLor/: Gram_U+I3  U_2U_2I3_mat1  U_2U_2I3_mat2  U_E8_mat1  U_E8_mat2  U_I3_mat2
gap/: PackageInfo.g
gap/lib/: AutomorphismPolytope.g  CVP.g  DualDescriptionSimple.g  IndefiniteForms.g  InputOutput.g  LatticeDelaunays.g  LatticeIsomorphy.g  LinearProgramming.g  Lorentzian.g  MyGraphicalFunctions.g
indef/: PackageInfo.g  init.g
indef/lib/: AutomorphismPolytope.g  CVP.g  DualDescriptionAndADM.g  DualDescriptionSimple.g  FileFormalism.g  Fractions.g  Fundamental.g  GroupAction.g  IndefiniteForms.g  IndefiniteFormsFundamental.g  InputOutput.g  LatticeDelaunays.g  LatticeIsomorphy.g  LinearProgramming.g  Lorentzian.g  PositivitySymmetricMatrices.g  SetFunctionality.g
lib/: AffineBasis.g  AutomorphismPolytope.g  BasicGeomNbr.g  CVP.g  DualDescriptionAndADM.g  DualDescriptionSimple.g  FileFormalism.g  Fractions.g  Fundamental.g  FundamentalDelaunay.g  GroupAction.g  IndefiniteForms.g  IndefiniteFormsFundamental.g  InputOutput.g  Kskeletton.g  LatticeDelaunays.g  LatticeIsomorphy.g  LinearProgramming.g  Lorentzian.g  MyGraphicalFunctions.g  PositivitySymmetricMatrices.g  PrintingFacilities.g  QNfundamental.g  SetFunctionality.g
manual/: makefile  manual.tex
src/: ExternalCalls.jl  Functions.jl  Indefinite.jl
