#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(AUTOM, 1.0, mathieu.dutour@gmail.com)
AM_INIT_AUTOMAKE([])
AM_MAINTAINER_MODE([disable])
AC_OUTPUT(Makefile src/Makefile)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([strchr strcspn strpbrk])

AC_OUTPUT
